...
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.ryandon.starfinderopenreference.PREFS</string>
    <string name="LOGGEDIN" value="false">loggedin</string>
    <string name="action_logout">Sign Out</string>
    <string name="invalid_pwd">Enter valid password (at least 6 characters)</string>

    <string name="open_game_license">OGL</string>
    <string name="reference_open_starfinder_search">resourse_open_starfinder_search</string>
    <string name="reference_open_sf_search_hint">refernce_open_sf_search_hint</string>
    <string name="StarfinderOpenReference">Starfinder Open Reference</string>
    <string name="action_ogl">OGL</string>
    <string name="title_filter">Choose Spell Filters</string>
    <string name="text_spell_level">Level</string>
    <string name="text_spell_school">School</string>
    <string name="text_spell_class">Class</string>
    <string name="text_spell_range">Range</string>
    <string name="text_spell_cast_time">Cast Time</string>
    <string name="text_spell_source">Sources</string>
...
